Added # to main

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-  <div id="main">
+  <div id="#main">
 
 
     <!--
